--- a/Beacon/Beacon/Info.plist
+++ b/Beacon/Beacon/Info.plist
@@ -4,7 +4,7 @@
 <dict>
 	<key>UIAppFonts</key>
 	<array>
-		<string>SFDisplayHeavy.otf</string>
+		<string>SFDisplayHeavy.ttf</string>
 	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
