--- a/Beacon/Podfile
+++ b/Beacon/Podfile
@@ -5,6 +5,7 @@ target 'Beacon' do
   pod 'SVProgressHUD'
   pod 'Masonry'
   pod 'AFNetworking', '~> 3.0'
+  pod 'YYCache'
 
   target 'BeaconTests' do
   end
